--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
-      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -47,8 +46,7 @@
 
         <h2>JavaScript</h2>
         <ul>
-          <li>A variable is a named container that allows us to store data in our code.</li>
-          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript notes here</li>
         </ul>
 
       </section>
@@ -57,6 +55,5 @@
     <footer>
       <p>I can code!</p>
     </footer>
-    <script src="./assets/script.js"></script>
   </body>
 </html>
